[package]
name = "ssh-manager-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
teloxide = { version = "0.12", default_features=false, features = ["macros", "rustls", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
pwhash = "1.0.0"
byteorder = "1.4.3"
base64-url = "2.0.0"
flate2 = { version = "1.0.25", features = ["zlib"] }
serde = { version = "1.0.152", features = ["derive"]}
config = "0.13.3"
lazy_static = "1.4.0"
time = { version = "0.3.20", features = ["formatting", "macros", "parsing", "local-offset"] }
rand = "0.8.5"
users = "0.11.0"
chrono = "0.4.24"
regex = "1.7.3"
qrcode = "0.12.0"
image = "0.23.14"
teloxide-core = { version = "0.9.1", features = ["rustls"], default-features = false }
url = "2.3.1"

[profile.release]
lto = true

